review_2_svc.yaml
# reviews-v1-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: reviews-v2
  namespace: default
spec:
  ports:
  - port: 9080
    name: http
  selector:
    app: reviews
    version: v2 # Selects ONLY pods with version=v1 label
